# OS

./: build.bat  start.sh
laba1/: CMakeLists.txt
laba2/: CMakeLists.txt  README.md  background.cpp  build.bat  build.sh  main.cpp  sleep.cpp
laba2/background/: CMakeLists.txt  background.cpp  background.hpp
laba3/: CMakeLists.txt  README.md  async_process.cpp  logger.cpp  main.cpp  mutex.cpp  shared_memory.cpp
laba3/include/: async_process.h  logger.h  mutex.h  shared_memory.h
laba4/: CMakeLists.txt  README.md  main.cpp  temperature_generator.cpp
laba5/: CMakeLists.txt  README.md  docker-compose.yaml  init.sql  main.cpp  temperature_generator.cpp
laba5/com_port/: com_port.cpp
laba5/include/: com_port.hpp
laba5/python_http/: main.py
laba6/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
